# gene_intel

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .iprscan_test_jobid  Dockerfile  README.md  TODO.md  WHITEPAPER.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  wget-log
artgene-archive/: .env.example  CLAUDE_CODE_PROMPTS.md  docker-compose.yml
artgene-archive/.github/workflows/: ci.yml
artgene-archive/apps/dashboard/: next.config.js  package.json
backend/: .env.example  conftest.py
backend/app/: config.py  dependencies.py  main.py
backend/app/agents/: agent_a_semantic.py  agent_c_explainer.py  agent_evo.py  bio_dictionary.py  (+2 more)
backend/scripts/: build_desc_lookup.py  check_ingestion.py  patch_ingest.py
backend/tests/: conftest.py  test_agent_a.py  test_cypher_validator.py  test_dialect_detector.py  test_domain_ingest_ftp.py  test_domain_ingest_interpro.py  test_domain_ingest_interproscan.py  test_domain_ingest_uniprot.py  test_gtf_parser.py  test_neighborhood_builder.py  test_run_ingest_domains.py
data/: README.md
data/interpro/: entry.list
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
nginx/: nginx.conf
scripts/: audit_neo4j.py  download_biomart.py  download_ecoli.sh  download_ensembl.sh  download_genome_fasta.sh  download_interpro.py  download_interpro_ftp.sh  dry_run_domain_ingest.py  ingest_domains_ftp.py  init_schema.py  seed_demo.py  test_api_connectivity.py  test_biomart_urls.py  test_interpro_mapping.py
(+62 files in other folders)
